{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 174,
  "lineage": "75e64998-22f9-3562-c9e7-6889a2545bf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f76757804595c149",
            "network_border_group": "us-west-2",
            "private_dns": "ip-10-0-0-243.us-west-2.compute.internal",
            "public_dns": "ec2-44-242-116-105.us-west-2.compute.amazonaws.com",
            "public_ip": "44.242.116.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-001445fa383839960",
            "network_border_group": "us-west-2",
            "private_dns": "ip-10-0-1-213.us-west-2.compute.internal",
            "public_dns": "ec2-35-165-45-68.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.45.68",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:internet-gateway/igw-05d0670a767656703",
            "id": "igw-05d0670a767656703",
            "owner_id": "844591813532",
            "tags": {
              "Name": "ashirt"
            },
            "tags_all": {
              "Name": "ashirt"
            },
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-api/3cf45efd40e60eb7",
            "arn_suffix": "app/ashirt-api/3cf45efd40e60eb7",
            "dns_name": "ashirt-api-213360097.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-api/3cf45efd40e60eb7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ashirt-api",
            "security_groups": [
              "sg-0ec1a88512dd73b9b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ed327d60d7ff377"
              },
              {
                "subnet_id": "subnet-02bc34912480cdc26"
              }
            ],
            "subnets": [
              "subnet-00ed327d60d7ff377",
              "subnet-02bc34912480cdc26"
            ],
            "tags": {
              "Name": "ashirt"
            },
            "tags_all": {
              "Name": "ashirt"
            },
            "vpc_id": "vpc-0d58d33b59fff28d4",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.api-lb",
            "aws_subnet.public",
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-frontend/357d8074be3a3a28",
            "arn_suffix": "app/ashirt-frontend/357d8074be3a3a28",
            "dns_name": "ashirt-frontend-2059858946.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-frontend/357d8074be3a3a28",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ashirt-frontend",
            "security_groups": [
              "sg-097b9f6fa6e012f0d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ed327d60d7ff377"
              },
              {
                "subnet_id": "subnet-02bc34912480cdc26"
              }
            ],
            "subnets": [
              "subnet-00ed327d60d7ff377",
              "subnet-02bc34912480cdc26"
            ],
            "tags": {
              "Name": "ashirt"
            },
            "tags_all": {
              "Name": "ashirt"
            },
            "vpc_id": "vpc-0d58d33b59fff28d4",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.frontend-lb",
            "aws_subnet.public",
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-web/980a0fb3ed1293e8",
            "arn_suffix": "app/ashirt-web/980a0fb3ed1293e8",
            "dns_name": "internal-ashirt-web-689291296.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-web/980a0fb3ed1293e8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ashirt-web",
            "security_groups": [
              "sg-050d8e3e42e397d47"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ed327d60d7ff377"
              },
              {
                "subnet_id": "subnet-02bc34912480cdc26"
              }
            ],
            "subnets": [
              "subnet-00ed327d60d7ff377",
              "subnet-02bc34912480cdc26"
            ],
            "tags": {
              "Name": "ashirt"
            },
            "tags_all": {
              "Name": "ashirt"
            },
            "vpc_id": "vpc-0d58d33b59fff28d4",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az",
            "aws_security_group.web-lb",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:listener/app/ashirt-api/3cf45efd40e60eb7/7d552e843309afd2",
            "certificate_arn": "arn:aws:acm:us-west-2:844591813532:certificate/f2846bdc-0708-418a-9ba6-e59f14a1f4fb",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-api-tg/4fcb915c19936478",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:listener/app/ashirt-api/3cf45efd40e60eb7/7d552e843309afd2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-api/3cf45efd40e60eb7",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ashirt",
            "aws_lb.api",
            "aws_lb_target_group.api",
            "aws_security_group.api-lb",
            "aws_subnet.public",
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:listener/app/ashirt-frontend/357d8074be3a3a28/01a1d2d451ac283a",
            "certificate_arn": "arn:aws:acm:us-west-2:844591813532:certificate/f2846bdc-0708-418a-9ba6-e59f14a1f4fb",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-frontend-tg/da7f8928d2b352c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:listener/app/ashirt-frontend/357d8074be3a3a28/01a1d2d451ac283a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-frontend/357d8074be3a3a28",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.frontend-lb",
            "aws_subnet.public",
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az",
            "aws_acm_certificate.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:listener/app/ashirt-web/980a0fb3ed1293e8/f25ce118d7dcf74d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-web-tg/7284d2af4b93c330",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:listener/app/ashirt-web/980a0fb3ed1293e8/f25ce118d7dcf74d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:loadbalancer/app/ashirt-web/980a0fb3ed1293e8",
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.web",
            "aws_security_group.web-lb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az",
            "aws_lb.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-api-tg/4fcb915c19936478",
            "arn_suffix": "targetgroup/ashirt-api-tg/4fcb915c19936478",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,401,404",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-api-tg/4fcb915c19936478",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ashirt-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-frontend-tg/da7f8928d2b352c5",
            "arn_suffix": "targetgroup/ashirt-frontend-tg/da7f8928d2b352c5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-frontend-tg/da7f8928d2b352c5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ashirt-frontend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-web-tg/7284d2af4b93c330",
            "arn_suffix": "targetgroup/ashirt-web-tg/7284d2af4b93c330",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,401,404",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:844591813532:targetgroup/ashirt-web-tg/7284d2af4b93c330",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ashirt-web-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05d0670a767656703",
            "id": "r-rtb-0e416675fb6b7312a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e416675fb6b7312a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:security-group/sg-0248f59b3f06f8e30",
            "description": "allow traffic to ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0248f59b3f06f8e30",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ec1a88512dd73b9b"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ashirt-api-ecs",
            "name_prefix": "",
            "owner_id": "844591813532",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:security-group/sg-0ec1a88512dd73b9b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec1a88512dd73b9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ashirt-api-lb",
            "name_prefix": "",
            "owner_id": "844591813532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ashirt-api-sg"
            },
            "tags_all": {
              "Name": "ashirt-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:security-group/sg-0a6e83d025447375e",
            "description": "allow traffic to ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6e83d025447375e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097b9f6fa6e012f0d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ashirt-frontend-ecs",
            "name_prefix": "",
            "owner_id": "844591813532",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:security-group/sg-097b9f6fa6e012f0d",
            "description": "Allow TLS inbound traffic to frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097b9f6fa6e012f0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ashirt-frontend-lb",
            "name_prefix": "",
            "owner_id": "844591813532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ashirt-frontend-sg"
            },
            "tags_all": {
              "Name": "ashirt-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:security-group/sg-0936cdb5d663069de",
            "description": "allow traffic to rds",
            "egress": [],
            "id": "sg-0936cdb5d663069de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0248f59b3f06f8e30",
                  "sg-0e73d65c726e73010"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ashirt-ashirt-rds",
            "name_prefix": "",
            "owner_id": "844591813532",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:security-group/sg-0e73d65c726e73010",
            "description": "allow traffic to ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e73d65c726e73010",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050d8e3e42e397d47"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ashirt-web-ecs",
            "name_prefix": "",
            "owner_id": "844591813532",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:security-group/sg-050d8e3e42e397d47",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050d8e3e42e397d47",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6e83d025447375e"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ashirt-web-lb",
            "name_prefix": "",
            "owner_id": "844591813532",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ashirt-web-sg"
            },
            "tags_all": {
              "Name": "ashirt-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-api-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2356629414",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0936cdb5d663069de",
            "self": false,
            "source_security_group_id": "sg-0248f59b3f06f8e30",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-ecs",
            "aws_security_group.rds",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-egress-api-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-214136005",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0248f59b3f06f8e30",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-ecs",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-egress-api-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1268413328",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ec1a88512dd73b9b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-egress-frontend-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-25720821",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a6e83d025447375e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend-ecs",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-egress-frontend-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2102120784",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-097b9f6fa6e012f0d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt",
            "aws_security_group.frontend-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-egress-web-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1917544697",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e73d65c726e73010",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-ecs",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-egress-web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2058944825",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-050d8e3e42e397d47",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ingress-api-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8000,
            "id": "sgrule-1304192661",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0248f59b3f06f8e30",
            "self": false,
            "source_security_group_id": "sg-0ec1a88512dd73b9b",
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-ecs",
            "aws_security_group.api-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ingress-api-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-468258243",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ec1a88512dd73b9b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ingress-frontend-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-1382827762",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6e83d025447375e",
            "self": false,
            "source_security_group_id": "sg-097b9f6fa6e012f0d",
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend-ecs",
            "aws_security_group.frontend-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ingress-frontend-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2818592738",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-097b9f6fa6e012f0d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ingress-web-ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8000,
            "id": "sgrule-302430704",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e73d65c726e73010",
            "self": false,
            "source_security_group_id": "sg-050d8e3e42e397d47",
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-ecs",
            "aws_security_group.web-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ingress-web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 8000,
            "id": "sgrule-3586239757",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-050d8e3e42e397d47",
            "self": false,
            "source_security_group_id": "sg-0a6e83d025447375e",
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend-ecs",
            "aws_security_group.web-lb",
            "aws_vpc.ashirt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-web-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-952384178",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0936cdb5d663069de",
            "self": false,
            "source_security_group_id": "sg-0e73d65c726e73010",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ashirt",
            "aws_security_group.rds",
            "aws_security_group.web-ecs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:subnet/subnet-00ed327d60d7ff377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00ed327d60d7ff377",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844591813532",
            "tags": {
              "Name": "ashirt-public"
            },
            "tags_all": {
              "Name": "ashirt-public"
            },
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "dependencies": [
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:subnet/subnet-02bc34912480cdc26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02bc34912480cdc26",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "844591813532",
            "tags": {
              "Name": "ashirt-public"
            },
            "tags_all": {
              "Name": "ashirt-public"
            },
            "vpc_id": "vpc-0d58d33b59fff28d4"
          },
          "dependencies": [
            "aws_vpc.ashirt",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ashirt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:844591813532:vpc/vpc-0d58d33b59fff28d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08bd7e7f4d8e46933",
            "default_route_table_id": "rtb-0e416675fb6b7312a",
            "default_security_group_id": "sg-09012c904b3e8efea",
            "dhcp_options_id": "dopt-4faa7737",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d58d33b59fff28d4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e416675fb6b7312a",
            "owner_id": "844591813532",
            "tags": {
              "Name": "ashirt"
            },
            "tags_all": {
              "Name": "ashirt"
            }
          }
        }
      ]
    }
  ]
}